# cpu_combat

./: Cargo.toml  README.md
arbiter/: Cargo.toml
competitor/: Cargo.toml
competitor/src/: main.rs
core-challenges/: Cargo.toml
core-challenges/src/: lib.rs
core-challenges/src/solvers/: dummy_solver.rs  mod.rs  proof_of_work.rs
