[workspace]
resolver = "3"
members = [
    "arbiter",
    "competitor",
    "core-challenges",
]

[workspace.dependencies]
# Dependencias que todos los paquetes usarán
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
hex = "0.4"
sha2 = "0.10.9"
rayon = "1.10.0"
sysinfo = "0.35.2"