[package]
name = "competitor"
version = "0.1.0"
edition="2024"

[dependencies]
core-challenges = { path = "../core-challenges" } # Para usar los structs y traits que definimos
tokio = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
hex.workspace = true
sysinfo.workspace = true
indicatif = "0.17.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sha2.workspace = true
